Fix download items shrinking too much

--- a/src/styles/components/Downloads.css
+++ b/src/styles/components/Downloads.css
@@ -25,6 +25,12 @@
 
 @media (min-width: 640px) {
   .downloads .card {
+	  width: calc(50% - 24px) !important;
+  }
+}
+
+@media (min-width: 840px) {
+  .downloads .card {
 	  width: calc(33.33% - 24px) !important;
   }
 }
@@ -56,6 +62,7 @@
   content: ' ';
 	background-image: url('xls-icon.svg');
 	width:24px;
+  flex-shrink: 0;
 	height: 27px;
 	margin-right: 0.875rem;
 	background-repeat: no-repeat;
@@ -66,6 +73,7 @@
   content: ' ';
 	background-image: url('pdf-icon.svg');
 	width:24px;
+  flex-shrink: 0;
 	height: 27px;
 	margin-right: 0.875rem;
 	background-repeat: no-repeat;
@@ -75,6 +83,7 @@
   content: ' ';
 	background-image: url('download-icon.svg');
 	width:24px;
+  flex-shrink: 0;
 	height: 27px;
 	background-repeat: no-repeat;
 	right:0px;
